syntax = "proto3";

package web3_gateway;

import "proto/v1/web3_gateway/storage.proto";

option go_package = "github.com/project-nova/backend/proto/v1/web3_gateway";

service StorageService {
    rpc UploadContent(UploadContentReq) returns (UploadContentResp) {
    };
}