syntax = "proto3";

package web3_gateway;

option go_package = "github.com/project-nova/backend/proto/v1/web3_gateway";

enum StorageType {
    UNSPECIFIED_STORAGE_TYPE = 0;
    ARWEAVE = 1;
    IPFS = 2;
}

message Tag {
    string name = 1;
    string value = 2;
}

message UploadContentReq {	
  StorageType storage = 1;
  bytes content = 2;
  string content_type = 3;   
  repeated Tag tags = 4;
}

message UploadContentResp {
  string content_url = 1;
}

message FundIrysReq {
  int64 amountInWei = 1;
}

message FundIrysResp {
  string reward = 1;
  string target = 2;
  string quantity = 3;
  string id = 4;
}